# jiscv

./: .gitignore  Cargo.toml  flags.py  kernel.elf  kernel.ld  run.sh
.cargo/: config.toml
disk/: fileone.txt
kernel/: .gitignore  Cargo.toml  alloc.rs  dtree.rs  elf.rs  ext2.rs  interrupt.rs  main.rs  print.rs  proc.rs  registers.rs  sbi.rs  syscall.rs  traits.rs  trap.rs  uart.rs  virtio.rs
kernel/src/: dtree.rs  ext2.rs  interrupt.rs  main.rs  paging.rs  print.rs  proc.rs  sbi.rs  syscall.rs  tar.rs  trap.rs  user.rs  virtio.rs
kernel/uart/: mod.rs  uart16550.rs  uart16650.rs  uart8250.rs
shell/: Cargo.toml  build.rs  lib.rs  print.rs  syscall.rs  user.ld
shell/src/: lib.rs  main.rs  syscall.rs
src/: alloc.rs  main.rs  paging.rs  proc.rs  sbi.rs  trap.rs
user/src/: main.rs
utils/: Cargo.toml  btree.rs  lib.rs  rbtree.rs  static_alloc.rs
utils/src/: lib.rs  static_alloc.rs
